--- a/Bootstrap 5 Novos Recursos e Práticas Recomendadas de HTML, CSS e JavaScript/index.html
+++ b/Bootstrap 5 Novos Recursos e Práticas Recomendadas de HTML, CSS e JavaScript/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Barlow:wght@400;600&display=swap" rel="stylesheet">
   </head>
-<body>
+  
+<body data-bs-theme="light">
 
   <header>
     <nav class="navbar-expand-xl navbar bg-body-tertiary fixed-top">
@@ -41,8 +42,8 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"><div class="form-check form-switch">
-                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                  <label class="form-check-label" for="flexSwitchCheckDefault">Night mode</label>
+                  <input class="form-check-input" type="checkbox" role="switch" id="modo-noturno">
+                  <label class="form-check-label" for="modo-noturno">Night mode</label>
                 </div></a>
               </li>
           </div>
@@ -114,7 +115,7 @@
       <h2 class="text-center fw-bold pb-3">Our products</h2>
       
       <div class="container">
-        <div class="row g-4">
+        <div class="row mx-0">
          
           <div class="col-md-4 d-flex justify-content-center">
             <div class="card border-0 btn" data-bs-toggle="modal" data-bs-target="#modal-1" style="width: 18rem;">
@@ -194,6 +195,21 @@
             <input type="number" class="form-control" id="floatingTelefone" placeholder="(XX)XXXXX-XXXX">
             <label for="floatingTelefone">Phone</label>
           </div>
+          <select class="form-select mb-3" aria-label="Default select example">
+            <option selected>Contact preference</option>
+            <option value="1">E-mail</option>
+            <option value="2">Whats App</option>
+            <option value="3">Call</option>
+          </select>
+          <label for="nivel-satisfacao" class="form-label">Satisfaction level:</label>
+          <input type="range" class="form-range input-range" id="nivel-satisfacao">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Do you want to receive news by email?
+            </label>
+          </div>
+          <button type="button" class="btn botao-padrao w-100 fw-bold mt-3 py-3">Send</button>
         </form>
       </div>
     </section>
@@ -382,6 +398,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
   crossorigin="anonymous"></script>
+  <script src="./script.js"></script>
 
 </body>
+
+<footer class="text-center">
+  <section class="container p-4 pb-0 mb-4">
+    <a class="btn" href="#!"><i class="bi bi-whatsapp"></i></a>
+    <a class="btn" href="#!"><i class="bi bi-instagram"></i></a>
+    <a class="btn" href="#!"><i class="bi bi-twitter"></i></a>
+  </section>
+  <div class="p-3">
+      2025 <i class="bi bi-c-circle"></i> Desenvolvido por Stephani Miler | Projeto fictício Alura sem fins comerciais.
+  </div>
+</footer>
 </html>
